test_suite/alan-2022-examples/failing/004960_mutation.alan
source s begin leave Y0 and call end
